--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<!-- Meta -->
-	<title>GW2Timer.com - Advanced GW2 Timer and Daily Map Guide</title>
+	<title>GW2Timer.com - Advanced GW2 Timer and WvW Live Map</title>
 	<meta charset="utf-8" />
 	<meta name="robots" content="index, follow, noarchive" />
 	<meta name="description" content="Guild Wars 2 Heart of Thorns timer for world boss meta events, with daily checklists, resource nodes collections map, and Trading Post tracker overlay." />
@@ -137,7 +137,7 @@
 					<u><a class="jsTranslate" title="<dfn>Switch to Mobile Mode (right panel only)</dfn><br />gw2timer.com/m<br /><div class='mapLoc'><img src='http://i.imgur.com/0QsaeY7.png' /></div>" href="./?mode=Mobile">mobile</a></u><em> /</em>
 					<u><a class="jsTranslate" title="<dfn>Switch to Tile Mode (timers only)</dfn><br />gw2timer.com/t<br /><div class='mapLoc'><img src='http://i.imgur.com/Q6O2lIx.png' /></div>" href="./?mode=Tile">tile</a></u>
 				</span>
-				<div id="mapSwitch" class="mapHUDContainer" style="visibility:hidden;">
+				<div id="mapSwitch" class="mapHUDContainer">
 					<img id="mapSwitchButton" class="mapHUDButton curToggle" title="<dfn> Click to WVW </dfn>" src="img/ui/pages/wvw.png" alt="display" />
 				</div>
 				<div class="mapGPS mapHUDContainer">
