Workaround for Chrome voice bug

--- a/index.html
+++ b/index.html
@@ -625,7 +625,7 @@
 							</span>
 						</div>
 						<div id="chnOptionsChain">
-							<b class="jsTranslate">Timers Options</b>
+							<b class="jsTranslate">Timers</b>
 							<label title="13:00:00 or 1:00:00 PM"><input id="opt_bol_use24Hour" type="checkbox" /> 24:00 / 12AM</label>
 							<label title="Hide the chain bars when you check them."><input id="opt_bol_hideChecked" type="checkbox" /> Hide checked bosses</label>
 							<label title="Active/orange chain bars."><input id="opt_bol_expandWB" type="checkbox" /> Auto-expand events</label>
