--- a/index.html
+++ b/index.html
@@ -324,7 +324,7 @@
 					<img id="wvwAccountButton" class="mapHUDButton curToggle" title="<dfn> Click to Account </dfn>" src="img/ui/pages/account.png" alt="display" />
 				</div>-->
 				<div class="mapHUDContainer">
-					<img id="wvwToolsButton" class="mapHUDButton" title="Right click on the map to lay siege weapons." data-src="img/ui/tools.png" alt="Tools" />
+					<img id="wvwToolsButton" class="mapHUDButton" title="Right click on the map to lay siege weapons." data-src="img/account/menu/inventory.png" alt="Tools" />
 					<div class="mapHUDPopup cntComposition">
 						<div id="wvwSupply">
 							<div id="splCalculator">
