Sale update, trait skill tooltips

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 	<script>window.L || document.write('<script src="bin/leaflet.js"><\/script>');</script>
 	<!-- Web application files  -->
 	<script type="text/javascript" src="plugins.js"></script>
-	<script type="text/javascript" src="data/general.js?v=20160319"></script>
+	<script type="text/javascript" src="data/general.js?v=20160319A"></script>
 	<script type="text/javascript" src="data/chains-min.js"></script>
 	<script type="text/javascript" src="gw2t-min.js"></script><!-- Source is at http://gw2timer.com/gw2t.js -->
 <!-- Google Analytics -->
@@ -39,6 +39,7 @@
 </head>
 
 <body>
+	<div id="itemNull"></div>
 	<div id="itemConsole">
 		<div id="cslButtons">
 			<kbd id="cslClose" class="btnWindow btnClose" title="<dfn>Close Console</dfn><br />Click on the map then type /help for more information."></kbd>
