Account beta release, countdown update

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 	<script>window.L || document.write('<script src="bin/leaflet.js"><\/script>');</script>
 	<!-- Web application files  -->
 	<script type="text/javascript" src="plugins.js"></script>
-	<script type="text/javascript" src="data/general.js?v=20160419"></script>
+	<script type="text/javascript" src="data/general.js?v=20160419A"></script>
 	<script type="text/javascript" src="data/chains-min.js"></script>
 	<script type="text/javascript" src="gw2t-min.js"></script><!-- Source is at http://gw2timer.com/gw2t.js -->
 <!-- Google Analytics -->
@@ -144,9 +144,9 @@
 					<u><a class="jsTranslate" title="<dfn>Switch to Mobile Mode (right panel only)</dfn><br />gw2timer.com/m<br /><div class='mapLoc'><img src='http://i.imgur.com/0QsaeY7.png' /></div>" href="./?mode=Mobile">mobile</a></u><em> /</em>
 					<u><a class="jsTranslate" title="<dfn>Switch to Tile Mode (timers only)</dfn><br />gw2timer.com/t<br /><div class='mapLoc'><img src='http://i.imgur.com/Q6O2lIx.png' /></div>" href="./?mode=Tile">tile</a></u>
 				</span>
-				<!--<div class="mapHUDContainer">
-					<img id="mapAccountButton" class="mapHUDButton curToggle" title="<dfn> Click to Account </dfn>" src="img/ui/pages/account.png" alt="display" />
-				</div>-->
+				<div class="mapHUDContainer">
+					<img id="mapAccountButton" class="mapHUDButton curToggle" title="<dfn> Click to Account </dfn> (BETA)" src="img/ui/pages/account.png" alt="display" />
+				</div>
 				<div class="mapHUDContainer">
 					<img id="mapSwitchButton" class="mapHUDButton curToggle" title="<dfn> Click to WVW </dfn><br />gw2timer.com/wvw" src="img/ui/pages/wvw.png" alt="display" />
 				</div>
@@ -331,9 +331,9 @@
 				<input id="wvwCoordinatesName" class="mapCoordinatesName" type="text" />
 			</div>
 			<div class="mapPeripheral mapPeripheralNorth">
-				<!--<div class="mapHUDContainer">
-					<img id="wvwAccountButton" class="mapHUDButton curToggle" title="<dfn> Click to Account </dfn>" src="img/ui/pages/account.png" alt="display" />
-				</div>-->
+				<div class="mapHUDContainer">
+					<img id="wvwAccountButton" class="mapHUDButton curToggle" title="<dfn> Click to Account </dfn> (BETA)" src="img/ui/pages/account.png" alt="display" />
+				</div>
 				<div class="mapHUDContainer">
 					<img id="wvwToolsButton" class="mapHUDButton" title="Right click on the map to lay siege weapons." data-src="img/account/menu/inventory.png" alt="Tools" />
 					<div class="mapHUDPopup cntComposition">
