WvW ruins, skins set gem price

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 	<script>window.L || document.write('<script src="bin/leaflet.js"><\/script>');</script>
 	<!-- Web application files  -->
 	<script type="text/javascript" src="plugins.js"></script>
-	<script type="text/javascript" src="data/general.js?v=20160505B"></script>
+	<script type="text/javascript" src="data/general.js?v=20160505C"></script>
 	<script type="text/javascript" src="data/chains-min.js"></script>
 	<script type="text/javascript" src="gw2t-min.js"></script><!-- Source is at http://gw2timer.com/gw2t.js -->
 <!-- Google Analytics -->
@@ -435,6 +435,7 @@
 									</div>
 									<div id="logNarrateObjective" class="cssColumn">
 										<label><input id="opt_bol_narrateClaimed" type="checkbox" /><var></var></label>
+										<label><input id="opt_bol_narrateRuins" type="checkbox" /><var></var></label>
 										<label><input id="opt_bol_narrateCamp" type="checkbox" /><var></var></label>
 										<label><input id="opt_bol_narrateTower" type="checkbox" /><var></var></label>
 										<label><input id="opt_bol_narrateKeep" type="checkbox" /><var></var></label>
