--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 	<script>window.L || document.write('<script src="bin/leaflet.js"><\/script>');</script>
 	<!-- Web application files  -->
 	<script type="text/javascript" src="plugins.js"></script>
-	<script type="text/javascript" src="data/general.js?v=20160524"></script>
+	<script type="text/javascript" src="data/general.js?v=20160524A"></script>
 	<script type="text/javascript" src="data/chains-min.js"></script>
 	<script type="text/javascript" src="gw2t-min.js"></script><!-- Source is at http://gw2timer.com/gw2t.js -->
 <!-- Google Analytics -->
@@ -752,7 +752,8 @@
 					<label title="This is based on the prediction."><input id="opt_bol_alertUnsubscribe" type="checkbox" /> Unsubscribe from boss after it dies</label>
 					<br />
 					<h2>Account</h2>
-					<label title="Show/Hide colored borders over items in account banks."><input id="opt_bol_showRarity" type="checkbox" /> Show rarity on item slots</label>
+					<label title="Show/Hide colored borders over items in account banks."><input id="opt_bol_showRarity" type="checkbox" /> Always show rarity on item slots</label>
+					<label title="Decrease or increase bank UI size."><input id="opt_bol_condenseBank" type="checkbox" /> Always condense bank</label>
 					<h2>Trading</h2>
 					<label title="Regularly get the current buy and sell prices. This option must be enabled for notification of desired price range to work."><input id="opt_bol_refreshPrices" type="checkbox" /> Auto-refresh data and enable notification</label>
 					<label title="Will use the backup provider if unchecked."><input id="opt_bol_useMainTPSearch" type="checkbox" /> Use main TP search provider</label>
