Sale update, TP listings

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 	<script>window.L || document.write('<script src="bin/leaflet.js"><\/script>');</script>
 	<!-- Web application files  -->
 	<script type="text/javascript" src="plugins.js"></script>
-	<script type="text/javascript" src="data/general.js?v=20160622"></script>
+	<script type="text/javascript" src="data/general.js?v=20160622A"></script>
 	<script type="text/javascript" src="data/chains-min.js"></script>
 	<script type="text/javascript" src="gw2t-min.js"></script><!-- Source is at http://gw2timer.com/gw2t.js -->
 <!-- Google Analytics -->
@@ -41,7 +41,7 @@
 	<div id="itemAutoscroll"></div><!-- Cursor for autoscrolling -->
 	<div id="itemConsole">
 		<div id="cslButtons">
-			<kbd id="cslClose" class="btnWindow btnClose" title="<dfn>Close Console</dfn><br />Click on the map then type /help for more information."></kbd>
+			<kbd id="cslClose" class="btnWindow btnClose" title="<dfn>Close Console</dfn>"></kbd>
 			<kbd id="cslSelect" class="btnWindow btnSelect" title="<dfn>Select Console</dfn>"></kbd>
 			<kbd id="cslToggle" class="btnWindow btnToggle" title="<dfn>Toggle Console</dfn>"></kbd>
 		</div>
