--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 	<script>window.L || document.write('<script src="bin/leaflet.js"><\/script>');</script>
 	<!-- Web application files  -->
 	<script type="text/javascript" src="plugins.js"></script>
-	<script type="text/javascript" src="data/general.js?v=20160707"></script>
+	<script type="text/javascript" src="data/general.js?v=20160707A"></script>
 	<script type="text/javascript" src="data/chains-min.js"></script>
 	<script type="text/javascript" src="gw2t-min.js"></script><!-- Source is at http://gw2timer.com/gw2t.js -->
 <!-- Google Analytics -->
@@ -321,9 +321,9 @@
 			<div id="wvwExpandButton" class="mapExpandButton mapHUDButton btnHorizontal" title="<dfn>Click to Expand Map</dfn>"></div>
 			<div id="wvwLeaderboard">
 				<div id="lboContainer">
-					<kbd id="lboToggle" class="btnWindow lboButton btnToggle" title="<dfn>Toggle Leaderboard</dfn>"></kbd>
-					<kbd id="lboCondense" class="btnWindow lboButton btnHorizontal lboExtra" title="<dfn>Condense Leaderboard</dfn>"></kbd>
-					<kbd id="lboRegion" class="btnWindow lboButton btnVertical lboExtra" title="<dfn>Toggle All Server Matchups</dfn><br />gw2timer.com/<dfn>wvw/leaderboard</dfn>"></kbd>
+					<kbd id="lboToggle" class="btnWindow lboButton btnToggle" title="<dfn>Toggle leaderboard.</dfn>"></kbd>
+					<kbd id="lboCondense" class="btnWindow lboButton btnHorizontal lboExtra" title="<dfn>Condense leaderboard.</dfn>"></kbd>
+					<kbd id="lboRegion" class="btnWindow lboButton btnVertical lboExtra" title="<dfn>Toggle all server matchups.</dfn><br />gw2timer.com/<dfn>wvw/leaderboard</dfn>"></kbd>
 					<kbd id="lboOpaque" class="btnWindow lboButton btnOpaque lboExtra" title="<dfn>Toggle opacity.</dfn>"></kbd>
 					<kbd id="lboStats" class="btnWindow lboButton btnStats lboExtra" title="<dfn>Print server population list.</dfn>"></kbd>
 					<time id="lboCountdown" class="lboExtra"></time>
