URL article compare

--- a/index.html
+++ b/index.html
@@ -206,6 +206,7 @@
 								<input id="mapSearch" type="text" />
 								<h2 data-region="heart"></h2>
 								<ul>
+									<li data-zone="bloodstone"></li>
 									<li data-zone="verdant"></li>
 									<li data-zone="auric"></li>
 									<li data-zone="tangled"></li>
