--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 	<script>window.L || document.write("<script src='bin/leaflet.js'><\/script>");</script>
 	<!-- Web application files  -->
 	<script type="text/javascript" src="plugins.js"></script>
-	<script type="text/javascript" src="data/general.js?v=20160816"></script>
+	<script type="text/javascript" src="data/general.js?v=20160816A"></script>
 	<script type="text/javascript" src="data/chains-min.js"></script>
 	<script type="text/javascript" src="gw2t-min.js"></script><!-- Source is at http://gw2timer.com/gw2t.js -->
 <!-- Google Analytics -->
@@ -735,6 +735,8 @@
 							<label><input type="radio" name="int_setDimming" /> Dark</label>
 						</fieldset>
 					</div>
+					<label title="Compact clock in website mode has clock icons hidden. Requires reload."><input id="opt_bol_showClockIcons" type="checkbox" /> Always show clock icons</label>
+					<br />
 					<h2>Map</h2>
 					<label title="Show/Hide the map."><input id="opt_bol_showMap" type="checkbox" /> Show the map</label>
 					<label title="Show/Hide the container for Dashboard and Timeline."><input id="opt_bol_showHUD" type="checkbox" /> Show HUD over the map</label>
