--- a/index.html
+++ b/index.html
@@ -22,18 +22,18 @@
 	<script>window.L || document.write("<script src='bin/leaflet.js'><\/script>");</script>
 	<!-- Web application files  -->
 	<script type="text/javascript" src="plugins.js"></script>
-	<script type="text/javascript" src="data/general.js?v=20160822"></script>
+	<script type="text/javascript" src="data/general.js?v=20160822A"></script>
 	<script type="text/javascript" src="data/chains-min.js"></script>
 	<script type="text/javascript" src="gw2t-min.js"></script><!-- Source is at http://gw2timer.com/gw2t.js -->
-<!-- Google Analytics -->
-<script>
-	(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-	(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-	m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-	})(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-	ga('create', 'UA-51018564-1', 'gw2timer.com');
-	ga('send', 'pageview');
-</script>
+	<!-- Google Analytics -->
+	<script>
+		(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+		(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+		m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+		})(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+		ga('create', 'UA-51018564-1', 'gw2timer.com');
+		ga('send', 'pageview');
+	</script>
 </head>
 
 <body>
@@ -675,7 +675,7 @@
 				<kbd id="chnToggle" class="btnWindow btnVertical" title="<dfn>Toggle Active Chains</dfn>"></kbd>
 				<header id="headerChains_Scheduled">
 					<ins class="chn_scheduled"></ins>
-					<span class="jsTranslateCompound">Scheduled Bosses</span>
+					<span class="chnCategoryName jsTranslateCompound">Scheduled Bosses</span>
 				</header>
 				<section id="sectionChains_Scheduled">
 				</section>
@@ -683,27 +683,33 @@
 					<img id="chnDryTopWaypoint0" class="chnDryTopWaypoint jsClip" src="img/ui/placeholder.png" alt="X:00 Waypoint">
 					<img id="chnDryTopWaypoint1" class="chnDryTopWaypoint jsClip" src="img/ui/placeholder.png" alt="X:15 Waypoint">
 				</div>
+				<header id="headerChains_Special">
+					<ins class="chn_special"></ins>
+					<span class="chnCategoryName jsTranslateCompound">Special Bosses</span>
+					<kbd></kbd>
+				</header>
+				<section id="sectionChains_Special"></section>
 				<header id="headerChains_Drytop">
 					<ins class="chn_drytop"></ins>
-					<span class="jsTranslateCompound">Dry Top</span>
+					<span class="chnCategoryName jsTranslateCompound">Dry Top</span>
 					<kbd></kbd>
 				</header>
 				<section id="sectionChains_Drytop"></section>
 				<header id="headerChains_Legacy">
 					<ins class="chn_legacy"></ins>
-					<span class="jsTranslateCompound">Legacy Bosses</span>
+					<span class="chnCategoryName jsTranslateCompound">Legacy Bosses</span>
 					<kbd></kbd>
 				</header>
 				<section id="sectionChains_Legacy"></section>
 				<header id="headerChains_Temple">
 					<ins class="chn_temple"></ins>
-					<span class="jsTranslateCompound">Orr Temples</span>
+					<span class="chnCategoryName jsTranslateCompound">Orr Temples</span>
 					<kbd></kbd>
 				</header>
 				<section id="sectionChains_Temple"></section>
 				<header id="headerChains_Timetable">
 					<ins class="chn_timetable"></ins>
-					<span class="jsTranslateCompound">Full Timetable</span>
+					<span class="chnCategoryName jsTranslateCompound">Full Timetable</span>
 					<kbd></kbd>
 				</header>
 				<section id="sectionChains_Timetable"></section>
