--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
 	<script>window.L || document.write("<script src='bin/leaflet.js'><\/script>");</script>
 	<!-- Web application files  -->
 	<script type="text/javascript" src="plugins.js"></script>
-	<script type="text/javascript" src="data/general.js?v=20160829"></script>
-	<script type="text/javascript" src="data/chains-min.js"></script>
+	<script type="text/javascript" src="data/general.js?v=20160829A"></script>
+	<script type="text/javascript" src="data/chains.js"></script>
 	<script type="text/javascript" src="gw2t-min.js"></script><!-- Source is at http://gw2timer.com/gw2t.js -->
 	<!-- Google Analytics -->
 	<script>
@@ -642,7 +642,8 @@
 					<img id="optChainsIcon" src="img/ui/toggle.png" alt="Toggle" />
 					<div id="chnOptionsPopup" class="cntComposition cntPopup">
 						<div id="chnOptionsStopwatchUp">
-							<b class="jsTranslate">Stopwatch</b>
+							<input id="watOffsetMinutes" type="number" min="0" max="1440" step="1" value="0" title="<dfn>Stopwatch Offset:</dfn> minutes to add to the initial stopwatch time." />&nbsp;:&nbsp;
+							<input id="watOffsetSeconds" type="number" min="0" max="86400" step="1" value="0" title="<dfn>Stopwatch Offset:</dfn> seconds to add to the initial stopwatch time." />
 							<span class="watButtons">
 								<kbd id="watStart">▶/◫</kbd><kbd id="watStop">■</kbd><kbd id="watLap">★</kbd>
 							</span>
