--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 	<script>window.L || document.write("<script src='bin/leaflet.js'><\/script>");</script>
 	<!-- Web application files  -->
 	<script type="text/javascript" src="plugins.js"></script>
-	<script type="text/javascript" src="data/general.js?v=20160905"></script>
+	<script type="text/javascript" src="data/general.js?v=20160905A"></script>
 	<script type="text/javascript" src="data/chains-min.js"></script>
 	<script type="text/javascript" src="gw2t-min.js"></script><!-- Source is at http://gw2timer.com/gw2t.js -->
 	<!-- Google Analytics -->
@@ -108,7 +108,7 @@
 					</li>
 				</ul>
 			</div>
-			<article id="hudPane">
+			<article id="mapHUDPane">
 			<div id="mapExpandButton" class="mapExpandButton hudButton btnHorizontal" title="<dfn>Click to Expand Map</dfn>"></div>
 			<div id="hudOuter">
 				<div id="hudBoxes">
@@ -160,7 +160,6 @@
 								<li><a href="./?mode=Tile" class="jsTranslate" title="<div class='mapLoc'><img src='http://i.imgur.com/Q6O2lIx.png' /></div>">Tile</a> - Timers only: gw2timer.com/t</li>
 								<li><a href="./?mode=Mobile" class="jsTranslate" title="<div class='mapLoc'><img src='http://i.imgur.com/0QsaeY7.png' /></div>">Mobile</a> - App panel only: gw2timer.com/m</li>
 								<li><a href="./?mode=Simple" class="jsTranslate" title="<div class='mapLoc'><img src='http://i.imgur.com/Nk42voP.png' /></div>">Simple</a> - Clock only: gw2timer.com/s</li>
-								<li><a href="./?mode=Overlay">Overlay</a> - Streamlined for <a class="linkExternal" href="http://forum.renaka.com/topic/5546166/">ingame app</a></li>
 							</ul>
 							<h2>Contact</h2>
 							<ul>
