--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 	<script>window.L || document.write("<script src='bin/leaflet.js'><\/script>");</script>
 	<!-- Web application files  -->
 	<script type="text/javascript" src="plugins.js"></script>
-	<script type="text/javascript" src="data/general.js?v=20160906"></script>
+	<script type="text/javascript" src="data/general.js?v=20160906A"></script>
 	<script type="text/javascript" src="data/chains-min.js"></script>
 	<script type="text/javascript" src="gw2t-min.js"></script><!-- Source is at http://gw2timer.com/gw2t.js -->
 	<!-- Google Analytics -->
@@ -192,7 +192,7 @@
 					</div>
 				</div>
 				<div class="hudItem">
-					<span id="mapAccountButton" class="hudSelect" title="<dfn>View Your GW2 Account</dfn><br />gw2timer.com/a<div class='mapLoc'><img src='http://i.imgur.com/56HALM7.png' /></div>">
+					<span id="mapAccountButton" class="hudSelect curToggle" title="<dfn>View Your GW2 Account</dfn><br />gw2timer.com/a<div class='mapLoc'><img src='http://i.imgur.com/56HALM7.png' /></div>">
 						<span class="hudButtonContainer"><img class="hudButton" src="img/ui/pages/account.png" alt="display" /></span>
 						<var class="hudTitle jsTranslate">Account</var>
 					</span>
@@ -417,12 +417,12 @@
 					</div>
 				</div>
 				<div class="hudItem">
-					<span id="wvwAccountButton" class="hudSelect" title="<dfn>View Your GW2 Account</dfn><br />gw2timer.com/a<div class='mapLoc'><img src='http://i.imgur.com/56HALM7.png' /></div>">
+					<span id="wvwAccountButton" class="hudSelect curToggle" title="<dfn>View Your GW2 Account</dfn><br />gw2timer.com/a<div class='mapLoc'><img src='http://i.imgur.com/56HALM7.png' /></div>">
 						<span class="hudButtonContainer"><img class="hudButton" src="img/ui/pages/account.png" alt="display" /></span>
 					</span>
 				</div>
 				<div class="hudItem">
-					<span id="wvwSwitchButton" class="hudSelect" title="<dfn>Click to PvE</dfn>">
+					<span id="wvwSwitchButton" class="hudSelect curToggle" title="<dfn>Click to PvE</dfn>">
 						<span class="hudButtonContainer"><img class="hudButton curToggle" data-src="img/ui/leave.png" alt="display" /></span>
 					</span>
 				</div>
