App panel position revert

--- a/index.html
+++ b/index.html
@@ -794,7 +794,7 @@
 					<br />
 					<h2>Timer</h2>
 					<div class="optFieldsets">
-						<fieldset name="int_setPredictor" title="What statistic should be used to predict (highlight) events of a chain?<br />Auto will use your time of day to choose.<br /><br />Min: for full population map<br />Min-Avg: Min + (Avg - Min)/2<br />Avg: for regular zerg size"><legend>Predictor</legend>
+						<fieldset name="int_setPredictor" title="Statistic to predict (highlight) events of a chain.<br />Auto will use your time of day to choose.<br /><br />Min: for full population map<br />Min-Avg: Min + (Avg - Min)/2<br />Avg: for regular zerg size"><legend>Predictor</legend>
 							<label><input id="opt_int_setPredictor" type="radio" name="int_setPredictor" /> Auto</label>
 							<label><input type="radio" name="int_setPredictor" /> Min</label>
 							<label><input type="radio" name="int_setPredictor" /> Min-Avg</label>
