--- a/index.html
+++ b/index.html
@@ -265,6 +265,10 @@
 						<div id="mapZoneList" class="mapZoneList mapZoneLinks">
 							<aside>
 								<input id="mapSearch" type="text" />
+								<h2 data-region="ring"></h2>
+								<ul>
+									<li data-zone="ember"></li>
+								</ul>
 								<h2 data-region="heart"></h2>
 								<ul>
 									<li data-zone="bloodstone"></li>
