Daylight alarm, timeline toggle active stamp

--- a/index.html
+++ b/index.html
@@ -843,6 +843,8 @@
 					<label><input id="opt_int_alertSubscribedSecond" type="number" min="0" max="30" step="1" /> Second Alarm</label>
 					<label title="This happens at server reset or timestamp expiration. Alarm must be in Subscription Mode."><input id="opt_bol_alertAutosubscribe" type="checkbox" /> Autosubscribe to today's daily world boss</label>
 					<label title="This is based on the prediction."><input id="opt_bol_alertUnsubscribe" type="checkbox" /> Unsubscribe from boss after it dies</label>
+					<h3>Day and Night</h3>
+					<label title="This is independent of the boss alarms."><input id="opt_bol_alertDaylight" type="checkbox" /> Alert the start of day or night</label>
 					<br />
 					<h2>Account</h2>
 					<label title="Show/Hide colored borders over items in account banks."><input id="opt_bol_showRarity" type="checkbox" /> Always show rarity on item slots</label>
