--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
 	<script>window.L || document.write("<script src='bin/leaflet.js'><\/script>");</script>
 	<!-- Web application files  -->
 	<script type="text/javascript" src="plugins.js"></script>
-	<script type="text/javascript" src="data/general.js?v=20161010"></script>
+	<script type="text/javascript" src="data/general.js?v=20161010A"></script>
 	<script type="text/javascript" src="data/chains-min.js"></script>
-	<script type="text/javascript" src="gw2t-min.js"></script><!-- Source is at http://gw2timer.com/gw2t.js -->
+	<script type="text/javascript" src="gw2t.js"></script><!-- Source is at http://gw2timer.com/gw2t.js -->
 	<!-- Google Analytics -->
 	<script>
 		(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
@@ -577,8 +577,7 @@
 		<section id="paneClock" class="paneApp clkSizeRegular">
 			<div id="paneClockWall" class="clkSizeRegular"></div>
 			<div id="paneClockBackground" class="clkSizeRegular"></div>
-			<!--<img id="paneClockFace" class="clkSizeRegular" src="img/background/face_wintersday.png" alt="Clock Face">--><!-- Festival sensitive -->
-			<img id="paneClockFace" class="clkSizeRegular" src="img/background/face.png" alt="Clock Face">
+			<div id="paneClockFace" class="clkSizeRegular"></div>
 			<div id="paneClockIcons" class="clkSizeRegular">
 				<img id="clkIconSD0" class="iconSD" src="img/ui/placeholder.png" alt="X:00" />
 				<img id="clkIconSD1" class="iconSD" src="img/ui/placeholder.png" alt="X:15" />
