--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<!-- Meta -->
-	<title>GW2Timer.com - ArenaNet-Recommended Timer and Overlay</title>
+	<title>GW2Timer.com - ArenaNet-Recommended GW2 Timer and Overlay</title>
 	<meta charset="utf-8" />
 	<meta name="robots" content="index, follow, noarchive" />
 	<meta name="description" content="Guild Wars 2 Heart of Thorns world boss events timer, API key account viewer, resource nodes completion map, Trading Post tracker, WvW live map." />
