--- a/index.html
+++ b/index.html
@@ -327,6 +327,7 @@
 									<li data-zone="dredgehaunt"></li>
 									<li data-zone="timberline"></li>
 									<li data-zone="frostgorge"></li>
+									<li data-zone="bitterfrost"></li>
 								</ul>
 								<h2 data-region="ascalon"></h2>
 								<ul>
