--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 	<script>window.L || document.write("<script src='bin/leaflet.js'><\/script>");</script>
 	<!-- Web application files  -->
 	<script type="text/javascript" src="plugins.js"></script>
-	<script type="text/javascript" src="data/general.js?v=20161125"></script>
+	<script type="text/javascript" src="data/general.js?v=20161125A"></script>
 	<script type="text/javascript" src="data/chains-min.js"></script>
 	<script type="text/javascript" src="gw2t-min.js"></script><!-- Source is at http://gw2timer.com/gw2t.js -->
 	<!-- Google Analytics -->
@@ -99,6 +99,7 @@
 							<li id="mapContextOptimizePins">Optimize</li>
 							<li id="mapContextChatlinkPins">Chatlink</li>
 							<li id="mapContextURLPins">URL</li>
+							<li id="mapContextHelpPins">Help</li>
 							<li id="mapContextUndoPins">Undo</li>
 						</ul>
 					</li>
@@ -382,6 +383,7 @@
 							</li>
 							<li id="wvwContextOptimizePins">Optimize</li>
 							<li id="wvwContextURLPins">URL</li>
+							<li id="wvwContextHelpPins">Help</li>
 							<li id="wvwContextUndoPins">Undo</li>
 						</ul>
 					</li>
